internal/xds/translator/testdata/out/xds-ir-sublinear/ratelimit-multi-global-shared.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            foo/bar:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    path: foo/bar
                  name: first-route
                  route:
                    cluster: first-route-dest
                    rateLimits:
                    - actions:
                      - genericKey:
                          descriptorKey: test-namespace/test-policy-1/rule/0
                          descriptorValue: test-namespace/test-policy-1/rule/0
                      - headerValueMatch:
                          descriptorKey: rule-0-match-0
                          descriptorValue: rule-0-match-0
                          expectMatch: true
                          headers:
                          - name: x-user-id
                            stringMatch:
                              exact: one
                    upgradeConfigs:
                    - upgradeType: websocket
            foo/baz:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    path: foo/baz
                  name: second-route
                  route:
                    cluster: second-route-dest
                    rateLimits:
                    - actions:
                      - genericKey:
                          descriptorKey: test-namespace/test-policy-1/rule/0
                          descriptorValue: test-namespace/test-policy-1/rule/0
                      - headerValueMatch:
                          descriptorKey: rule-0-match-0
                          descriptorValue: rule-0-match-0
                          expectMatch: true
                          headers:
                          - name: x-user-id
                            stringMatch:
                              exact: one
                    upgradeConfigs:
                    - upgradeType: websocket
            test:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    path: test
                  name: third-route
                  route:
                    cluster: third-route-dest
                    rateLimits:
                    - actions:
                      - genericKey:
                          descriptorKey: test-namespace/test-policy-2/rule/0
                          descriptorValue: test-namespace/test-policy-2/rule/0
                      - headerValueMatch:
                          descriptorKey: rule-0-match-0
                          descriptorValue: rule-0-match-0
                          expectMatch: true
                          headers:
                          - name: x-user-id
                            stringMatch:
                              exact: two
                    - actions:
                      - genericKey:
                          descriptorKey: test-namespace/test-policy-2/rule/1
                          descriptorValue: test-namespace/test-policy-2/rule/1
                      - headerValueMatch:
                          descriptorKey: rule-1-match-0
                          descriptorValue: rule-1-match-0
                          expectMatch: true
                          headers:
                          - name: x-user-id
                            stringMatch:
                              exact: two
                    upgradeConfigs:
                    - upgradeType: websocket
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
    name: first-listener/*
